# fabdata-llm-retrieval

./: pyproject.toml
sandbox/: demo_plugin.py
sandbox/contexts/: context_searcher_2.txt  context_searcher_3.txt
src/fdllmret/: plugin.py  tools.py
src/fdllmret/datastore/: factory.py
src/fdllmret/datastore/providers/: redis_datastore.py
src/fdllmret/helpers/: encoding.py  extraction.py  query.py
src/fdllmret/models/: models.py
