[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = [{include = "src"}]

[project]
name = "fabdata-llm-retrieval"
version = "0.8.8"
requires-python = ">=3.8, <=3.13"
dependencies = [
    "fabdata-llm @ git+https://github.com/AI-for-Education/fabdata-llm.git@v0.22.4",
    "redis-stack-server-aci @ git+https://github.com/AI-for-Education/redis-stack-server-ACI@v0.1.2",
    "python-dotenv == 1.*",
    "pydantic == 2.*",
    "tenacity == 8.*",
    "numpy",
    "arrow == 1.*",
    "redis == 4.*",
    "joblib == 1.*",
    "pypdf == 4.*",
    "tqdm == 4.*",
    "pyyaml == 6.*",
    "pymupdf == 1.24.*",
    "scikit-learn == 1.5.*",
    "matplotlib >=3.8, < 4",
    "pyqt5 == 5.*",
    "fuzzywuzzy[speedup] < 1",
    "beautifulsoup4 == 4.*"
]
