[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fdllmret"
version = "0.10.5"
readme = "README.md"
requires-python = ">=3.10, <=3.13"
dependencies = [
    "python-dotenv==1.*",
    "pydantic==2.*",
    "tenacity==8.*",
    "arrow==1.*",
    "redis==4.*",
    "joblib==1.*",
    "pypdf==4.*",
    "tqdm==4.*",
    "pyyaml==6.*",
    "pymupdf==1.24.*",
    "scikit-learn==1.5.*",
    "beautifulsoup4==4.*",
    "fabdata-llm==0.27.0",
    "redis-stack-server-aci==0.27.0",
    "matplotlib==3.*",
    "numpy==2.*",
    "thefuzz[speedup]>=0.22",
]

[tool.uv.sources]
fabdata-llm = { git = "https://github.com/AI-for-Education/fabdata-llm.git", rev = "v0.27.0" }
redis-stack-server-aci = { git = "https://github.com/AI-for-Education/redis-stack-server-ACI", rev = "v0.1.3" }
